--- a/光大银行特色知识.md
+++ b/光大银行特色知识.md
@@ -22,13 +22,23 @@
 
 7.银行发行的借记卡主要以：**阳光系列**为主。举例：阳光借记卡、阳光薪悦卡、私行钻石卡、小银行家卡。
 
-## 二、光大集团
+### 二、光大集团
 
 0.光大集团全称（中国光大集团股份有限公司），由财政部和汇金公司发起设立，是中央直属的15家大型金融企业之一。光大集团**1983年5月**在香港创办，距今39年。光大日是每年**8.18**
 
-1.愿景、企业文件、价值观、企业使命看图:
+1.愿景、企业文件、价值观、企业使命:
 
-![img](file:///C:/Users/ZHAOJI~1/AppData/Local/Temp/021e0cac-a2eb-4058-9327-e6e90efb4fa0.png)
+企业愿景：**建设具有全球竞争力的世界一流金融控股集团**
+
+企业文化：**家园文化、阳光文化、崇商文化、担当文化。**
+
+价值观：**有情怀、有质量、有特色、有创新、有底线、有口碑、有活力、有责任**
+
+企业精神：**中国光大，光大中国**
+
+企业理念：**光明正大，守正创新**
+
+企业使命：**中国光大，让生活更美好**
 
 2.光大集团的新品牌标志，传承了EVERBRIGHT的历史，由EB组合而成，诠释了新时代集团品牌形象的（**生态协同、数字驱动、光大特色**）
 
