--- a/笔试/经济知识.md
+++ b/笔试/经济知识.md
@@ -1,4 +1,4 @@
-### 商业银行：
+## 商业银行
 
 1.商业银行贷款：按贷款保全方式分为：（**信用贷款和担保贷款**）；按贷款期限分为（**长期贷款和短期贷款**）；
 
@@ -24,7 +24,7 @@
 
 
 
-### 《中共中央关于制定国民经济和社会发展第十四个五年规划和2035远景目标的建议》
+## 《中共中央关于制定国民经济和社会发展第十四个五年规划和2035远景目标的建议》
 
 1.实现基本养老保险的（**全国统筹**），实现渐进式延迟法定退休年龄。
 
@@ -38,7 +38,7 @@
 
 
 
-### **经济**
+## **经济**
 
 1.掉期合约较为常见的（**利率掉期合约和 货币掉期合约**）。交换货币是同种货币则为利率掉期；异种货币则为货币掉期。
 
